SSH works and is in its own method for future reference.